# game-pc

./: CMakeLists.txt  Game.cpp  Game.hpp  ini.yaml  main.cpp
src/components/: Ambient.hpp  Animation.hpp  Button.hpp  CMakeLists.txt  Door.hpp  GameObject.hpp  HotSpot.hpp  Inventory.hpp  Item.hpp  RenderableObject.h  Room.hpp  Serial.hpp  Sprite.hpp  Texture.hpp  Transform.hpp  Visitor.hpp  Walkarea.hpp
src/components/src/: Ambient.cpp  Animation.cpp  Button.cpp  Door.cpp  GameObject.cpp  HotSpot.cpp  Inventory.cpp  Item.cpp  RenderableObject.cpp  Room.cpp  Sprite.cpp  Texture.cpp  Visitor.cpp  WalkArea.cpp
src/gui/: Button.hpp  CMakeLists.txt
src/gui/src/: Button.cpp
src/logic/: CMakeLists.txt  ExitState.hpp  Gameplay.EditorState.hpp  Gameplay.InventoryState.hpp  Gameplay.NormalState.hpp  IntroState.hpp  MenuState.hpp  State.hpp  States.hpp  x_IntroState.hpp  x_MenuState.hpp  x_States.hpp
src/logic/editor/: EditorState.Bitmap.hpp  EditorState.HotSpot.hpp  EditorState.Item.hpp  EditorState.WalkArea.hpp  EditorState.hpp
src/logic/editor/src/: EditorState.Bitmap.cpp  EditorState.HotSpot.cpp  EditorState.Item.cpp  EditorState.WalkArea.cpp  EditorState.cpp
src/logic/src/: ExitState.cpp  Gameplay.EditorState.cpp  Gameplay.InventoryState.cpp  Gameplay.NormalState.cpp  IntroState.cpp  MenuState.cpp  State.cpp  x_MenuState.cpp
src/managers/: AssetManager.hpp  CMakeLists.txt  ControlManager.cpp  ControlManager.hpp  ItemManager.hpp  LogManager.hpp  PlayerManager.cpp  PlayerManager.hpp  RenderManager.cpp  RenderManager.hpp  RoomManager.cpp  RoomManager.hpp  ScriptManager.hpp  SerializationManager.hpp  StateManager.hpp  TextManager.hpp  TextureManager.hpp  WindowManager.cpp  WindowManager.hpp
src/managers/roommanager/: Ambient.hpp  CMakeLists.txt  Room.hpp
src/managers/roommanager/src/: Ambient.cpp  GameObject.cpp  Room.cpp  RoomManager.cpp
src/managers/src/: AssetManager.cpp  ControlManager.cpp  ItemManager.cpp  LogManager.cpp  PlayerManager.cpp  RenderManager.cpp  RoomManager.cpp  ScriptManager.cpp  SerializationManager.cpp  StateManager.cpp  TextManager.cpp  TextureManager.cpp  WindowManager.cpp
src/managers/suitemanager/: CMakeLists.txt  GameObject.hpp  Room.hpp  RoomManager.hpp
src/managers/suitemanager/src/: Ambient.cpp  GameObject.cpp  Room.cpp  RoomManager.cpp
src/math/: CMakeLists.txt  Polygon.hpp  Vector2D.cpp  Vector2D.hpp  Visual.hpp
src/math/src/: Polygon.cpp  Vector2D.cpp
src/math_objects/: CMakeLists.txt  PolygonObject.hpp
src/math_objects/src/: PolygonObject.cpp
src/utils/: Files.hpp  Mouse.hpp  SDL_GFX.hpp  Sol.hpp  Timer.hpp
